# ltqmdd

./: .gitignore  CMakeLists.txt  README.md  first-level-exchange.dot  initial.dot  need2run.txt  res2.txt  result2.txt  results.txt  run.sh  second-level-exchange.dot
apps/: CMakeLists.txt  lower-main.cpp  main.cpp  mixed-main.cpp  orgnl-main.cpp  upper-main.cpp
circuits/: complex_circuit.real  demo.real  demo2.real  demo_cnot.drawio  demo_cnot.real  lvl.excalidraw  simple_circuit.real
circuits/experiments/QASMBench/: bv_n19.qasm  multiplier_n15.qasm  qaoa_n16.qasm  qec_en_n5.qasm  variational_n4.qasm  vqe_uccsd_n4.qasm
circuits/experiments/feynman/: gf2^6_mult.qasm  ham15-high.qasm  ham15-low.qasm  hwb10.qasm  hwb8.qasm  qcla_com_7.qasm
circuits/experiments/reversible_logic/: 2of5d2.tfc  4_49tc1.tfc  5bitadder.tfc  5mod5tc.tfc  (+15 more)
circuits/feynman_/: adder_8.qc  barenco_tof_10.qc  barenco_tof_3.qc  barenco_tof_4.qc  barenco_tof_5.qc  csla_mux_3.qc  csum_mux_9.qc  cycle_17_3.qc  gf2^10_mult.qc  gf2^128_mult.qc  gf2^16_mult.qc  gf2^256_mult.qc  gf2^32_mult.qc  gf2^4_mult.qc  gf2^5_mult.qc  gf2^64_mult.qc  gf2^6_mult.qc  gf2^7_mult.qc  gf2^8_mult.qc  gf2^9_mult.qc  grover_5.qc  ham15-high.qc  ham15-low.qc  hwb10.qc  hwb11.qc  hwb12.qc  hwb6.qc  hwb8.qc  mod5_4.qc  mod_adder_1024.qc  mod_adder_1048576.qc  mod_mult_55.qc  mod_red_21.qc  qcla_adder_10.qc  qcla_com_7.qc  qcla_mod_7.qc  rc_adder_6.qc  tof_10.qc  tof_3.qc  tof_4.qc  (+2 more)
circuits/reversible_logic/: 2-4dec.tfc  2of5d2.tfc  2of5d4-n7-gc12-qc31.tfc  4b15g_1.tfc  mspk_4_49_14.tfc  rd32.tfc
src/dd/: DDReorder.cpp
(+56 files in other folders)
